# app/Http/Controllers/CaixaController.php
@@ -2,14 +2,8 @@
 
 namespace App\Http\Controllers;
 
-use App\Data\Abastecimento;
-use App\Data\Saque;
-use App\Exceptions\CaixaInexistenteException;
-use App\Http\Requests\AbastecerRequest;
-use App\Http\Requests\SacarRequest;
-use App\Services\Caixa;
-use Carbon\Carbon;
-use Exception;
+use App\Http\Requests\OperacoesRequest;
+use App\Services\Operacoes;
 use Illuminate\Http\JsonResponse;
 
 /**
@@ -17,82 +11,30 @@ use Illuminate\Http\JsonResponse;
  */
 class CaixaController extends Controller
 {
-    public function __construct(private readonly Caixa $caixa)
-    {
-        //
-    }
-
     /**
      * @OA\Post(
-     *     path="/caixa/abastecer",
+     *     path="/caixa",
+     *
      *     @OA\RequestBody(
      *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/AbastecerRequest")
+     *
+     *         @OA\JsonContent(ref="#/components/schemas/OperacoesRequest")
      *     ),
+     *
      *     @OA\Response(
      *         response=200,
-     *         description="Abastecimento bem sucedido"
+     *         description="Operações bem sucedidas"
      *     ),
      *     @OA\Response(
      *         response=400,
-     *         description="Erro durante o abastecimento"
+     *         description="Erro durante as operações"
      *     )
      * )
      */
-    public function abastecer(AbastecerRequest $request): JsonResponse
+    public function operacoes(OperacoesRequest $request): JsonResponse
     {
-        try {
-            $this->caixa->abastecer(new Abastecimento(
-                caixaDisponivel: $request->caixaDisponivel,
-                notas: $request->notas
-            ));
+        $output = app(Operacoes::class)->executar($request->all());
 
-            return response()->json($this->formatStatus($this->caixa));
-        } catch (Exception $e) {
-            return response()->json($this->formatStatus($this->caixa, $e), 400);
-        }
-    }
-
-    /**
-     * @OA\Post(
-     *     path="/caixa/sacar",
-     *     @OA\RequestBody(
-     *         description="Dados para saque",
-     *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/SacarRequest")
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Saque bem sucedido"
-     *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="Erro durante o saque"
-     *     )
-     * )
-     */
-    public function sacar(SacarRequest $request): JsonResponse
-    {
-        try {
-            $this->caixa->sacar(new Saque(
-                valor: $request->valor,
-                horario: Carbon::parse($request->horario)
-            ));
-
-            return response()->json($this->formatStatus($this->caixa));
-        } catch (Exception $e) {
-            return response()->json($this->formatStatus($this->caixa, $e), 400);
-        }
-    }
-
-    private function formatStatus(Caixa $caixa, ?Exception $e = null): array
-    {
-        return [
-            'caixa' => $e instanceof CaixaInexistenteException ? [] : [
-                'caixaDisponivel' => $caixa->disponivel,
-                'notas' => $caixa->notas
-            ],
-            'erros' => $e ? [$e->getMessage()] : []
-        ];
+        return response()->json($output);
     }
 }
